# jupyter-positron-server

./: .gitignore  LICENSE  README.md  TLJH_INTEGRATION_NOTES.md  WORKSPACE_INTEGRATION.md  configuration.html  deployment.html  get_started.html  index.html  legacy_get_started.html  pyproject.toml  search.json  test_workspace_integration.py  troubleshooting.html
.github/workflows/: docs.yml  test.yml
docker/: README.md
docker/hub/: Dockerfile  jupyterhub_config.py
docker/singleuser/: Dockerfile
docs/: _quarto.yml  configuration.qmd  deployment.qmd  get_started.qmd  index.qmd  legacy_get_started.qmd  objects.json  troubleshooting.qmd
docs/superpowers/plans/: 2026-07-14-docker-compose-deployment.md
docs/superpowers/specs/: 2026-07-13-docker-compose-deployment-design.md
jupyter-positron-server/: __init__.py
jupyter-positron-server/tests/: test_setup.py
reference/: index.html  setup_positron_server.html  which_positron_server.html
scripts/: install-positron.sh
scripts/docker/: .env.example  .gitignore  README.md  docker-compose.yml
scripts/docker/hub/: jupyterhub_config.py
