[project]
name = 'jupyter_positron_server'
version = '0.0.2'
description = 'Running the Positron Server Web IDE inside the Jupyter environment'
readme = 'README.md'
requires-python = ">=3.9"
authors = [
    {name = "Isabel Zimmerman", email = "isabel.zimmerman@posit.co"}
]
classifiers = [
"Programming Language :: Python :: 3.9"
]
dependencies = [
  'jupyter-server-proxy >= 4.1.2',
]

[tool.setuptools.package-dir]
jupyter_positron_server = "jupyter-positron-server"

[tool.setuptools.package-data]
jupyter_positron_server = ["icons/*.svg"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "quartodoc>=0.11.1",
    "griffe>=1.3.2,<2.0.0"
]

[project.entry-points."jupyter_serverproxy_servers"]
positron = "jupyter_positron_server:setup_positron_server"
